test/libsolidity/syntaxTests/nameAndTypeResolution/219_memory_arrays_not_resizeable.sol
contract C {
    function f() public {
        uint[] memory x;
        x.length = 2;
    }
}
// ----
// TypeError: (72-80): Expression has to be an lvalue.
